# cmpsci236Game

./: CMakeLists.txt  LICENSE
236Game/: CMakeLists.txt  GameApp.cpp  scenes.cpp
docs/: GettingStarted.md  README.md
docs/Data_Structures_Design/: Data_Structures_Design.iuml  Data_Structures_Design_PUML.txt
docs/Game_Engine/: Game_engine.iuml
docs/Game_Mechanics/: Game_Event.iuml  Game_Story.iuml  Game_Story_BST.iuml  Game_board_ex.iuml  Story_FSM.iuml
docs/Party_Design/: Character_Design_PUML.txt  Party_Design.iuml  Party_Design_PUML.txt
docs/Student_Sequence/: Party_Event_seq.txt
src/GameEngine/: CMakeLists.txt  Engine.cpp  Engine.h  EventManager.h  GameEngine.h  RenderEngine.cpp  RenderEngine.h
src/GameEngine/EventSystem/: CMakeLists.txt  Event.h  EventManager.cpp  EventManager.h
src/GameEngine/RenderEngine/: CMakeLists.txt  ConsoleRenderer.cpp  ConsoleRenderer.h  RenderEngine.h  Renderable.h
src/GameEngine/base/: CMakeLists.txt  base.h
test/: CMakeLists.txt  EngineTest.cpp
